<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center_horizontal"
    tools:context=".Transaction">

    <TextView
        android:id="@+id/sname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/name"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sname"
        android:layout_margin="8dp"
        android:text="@string/phone"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/balance"
        android:layout_below="@id/sPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/balance"
        android:textColor="#000"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/trans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/balance"
        android:layout_margin="8dp"
        android:onClick="transaction"
        android:text="@string/click_here_to_transfer_amount"
        android:textColor="#000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/transa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/trans"
        android:layout_margin="8dp"
        android:onClick="transact"
        android:text="@string/click_here_to_view_transactions"
        android:textColor="#000"
        android:textSize="15sp" />

    <ListView
        android:id="@+id/list1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/transa"
        android:layout_margin="10dp"
        android:background="#fff" />
</RelativeLayout>